--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="google-site-verification" content="DDtQuhGses2dbnFX56XFlh41x4ftvc-ePlzjb3BqipI" />
   <meta charset="UTF-8">
   <meta name="description" content="Globaltradeoptions.biz scam review. Learn why this broker is unlicensed and defrauding investors worldwide.">
   <meta name="keywords" content="Globaltradeoptions.biz scam, Globaltradeoptions.biz legit, Globaltradeoptions.biz reviews, Globaltradeoptions.biz review, is Globaltradeoptions.biz scam or legit, Globaltradeoptions.biz">
